--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 	<header>Welcome to Accio jobs!</header>
 		</marquee>
 	<h1>
-		<a href="https://acciojob.com/blog/">Blog</a>
+		<a href="https://acciojob.com/blog/">Accio Job's Blog</a>
 	</h1>
 	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px"
 		</img>
 	   <h1>
-		<a href="https://acciojob.com/blog/brute-force-vs-optimization/" >Brute Force Vs Optimization</a>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/" >Brute Force vs. Optimization</a>
 	   </h1>
 	<p>We can say that optimization is need of good programming save space and time.</p>
 	
 <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px"
 	</img>
 	<h1>
-	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA Vs competitive programming</a>
+	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
 	</h1>
 	<p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a dilemma as a programmer in your graduate years.</p>
 	<img src="https://images.ctfassets.net/az3stxsro5h5/4GGE7q8VAEWhnpm0HXZMU9/f3da95fc965d0b1718db2393affe83aa/Jun4-How_to_Use_LinkedIn_for_Beginners-Newsletter-Feature-Share" height="200px">
