--- a/main.html
+++ b/main.html
@@ -27,8 +27,7 @@
 	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
 	</h2>
 	<p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a dilemma as a programmer in your graduate years.</p>
-	<img src="https://images.ctfassets.net/az3stxsro5h5/4GGE7q8VAEWhnpm0HXZMU9/f3da95fc965d0b1718db2393affe83aa/Jun4-How_to_Use_LinkedIn_for_Beginners-Newsletter-Feature-Share" height="200px">
-</img>
+	<img src="https://via.placeholder.com/200"height="200px">
 	<h2>
 	<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10  Tips  to  Optimize  Your  Linkedln  Profile And Attract Recruiters</a>
 	</h2>
