--- a/main.html
+++ b/main.html
@@ -8,29 +8,27 @@
 
 <body>
 	<marquee direction="left">
-	<header>Welcome to Accio jobs!</header>
+	<header><h1>Welcome to Accio jobs!</h1></header>
 		</marquee>
-	<h2>
+	<h1>
 		<a href="https://acciojob.com/blog/">Accio Job's Blog</a>
-	</h2>
+	</h1>
 	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
-	
-	
-	   <h2>
+	 <h1>
 		<a href="https://acciojob.com/blog/brute-force-vs-optimization/" >Brute Force vs. Optimization</a>
-	   </h2>
+	   </h1>
 	<p>We can say that optimization is need of good programming save space and time.</p>
 	
 <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
 	
-	<h2>
+	<h1>
 	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
-	</h2>
+	</h1>
 	<p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a dilemma as a programmer in your graduate years.</p>
 	<img src="https://via.placeholder.com/200"height="200px">
-	<h2>
+	<h1>
 	<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10  Tips  to  Optimize  Your  Linkedln  Profile And Attract Recruiters</a>
-	</h2>
+	</h1>
 	<p>As a job seeker you, may wonder that linkedin plays a vital role in finding the appropriate job </p>
 
     <script type="text/javascript" src="./script.js">
